테스트시 생성자 리플렉션 관련 에러 임시조치